[package]
authors     = ["magic-akari <akari.ccino@gmail.com>"]
description = "A WASM based Markdown Formatter"
edition     = "2024"
homepage    = "https://github.com/wasm-fmt/markdown"
keywords    = ["wasm", "markdown", "formatter"]
license     = "MIT"
name        = "markdown"
readme      = "README.md"
repository  = "https://github.com/wasm-fmt/markdown"
version     = "0.0.0"


[dependencies]
anyhow                 = "1"
dprint-core            = "0.67.4"
dprint-plugin-markdown = "0.20.0"
js-sys                 = "0.3"
serde-wasm-bindgen     = "0.6"
wasm-bindgen           = "0.2"

[dev-dependencies]
dprint-development = "0.10.1"
serde_json         = "1"


	[package.metadata.wasm-pack.profile.release]
	wasm-opt = ["-Os", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]


[lib]
crate-type = ["cdylib", "rlib"]


[profile.release]
codegen-units = 1
debug         = false
lto           = true
opt-level     = "s"
panic         = "abort"
strip         = "symbols"

[[test]]
harness = false
name    = "specs"
path    = "tests/spec_test.rs"

[patch.crates-io]
regex = { path = "crates/regex_patch" }
